WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
214968
[iOS] Unable to swipe on IMDB.com after long press on image
https://bugs.webkit.org/show_bug.cgi?id=214968
Summary
[iOS] Unable to swipe on IMDB.com after long press on image
Antoine Quint
Reported
2020-07-30 08:18:18 PDT
[iOS] Unable to swipe on IMDB.com after long press on image
Attachments
Patch
(5.27 KB, patch)
2020-07-30 08:25 PDT
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2020-07-30 08:25:23 PDT
Created
attachment 405570
[details]
Patch
Antoine Quint
Comment 2
2020-07-30 08:25:29 PDT
<
rdar://problem/66234421
>
EWS
Comment 3
2020-07-30 10:12:38 PDT
Committed
r265088
: <
https://trac.webkit.org/changeset/265088
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 405570
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug